--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "laguite-web",
   "type": "module",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "docs:sync": "node scripts/update-from-folder.js"
   },
   "dependencies": {
     "astro": "^5.16.4",
